Implement xtra-daemon control via property
Change-Id: I8e3aa0760b49143967597530eae4aa61a005b9c6

--- a/init.hardware.rc
+++ b/init.hardware.rc
@@ -719,6 +719,9 @@ service loc_launcher /vendor/bin/loc_launcher
     class late_start
     group gps inet diag wifi
 
+on property:persist.sys.xtra-daemon.enabled=*
+    restart loc_launcher
+
 service pd_mapper /vendor/bin/pd-mapper
      class core
 
